--- a/package.json
+++ b/package.json
@@ -10,27 +10,30 @@
     "expo:bundle:android-hermes": "expo export --platform android",
     "expo:bundle:ios-hermes": "expo export --platform ios",
     "expo:bundle:web": "expo export --platform web",
-    "bundle:ios-js": "npx react-native bundle --entry-file index.ts --platform ios --dev false --minify false --bundle-output ./dist/index.ios.jsbundle --assets-dest ./dist/assets-ios",
-    "bundle:android-js": "npx react-native bundle --entry-file index.ts --platform android --dev false --minify false --bundle-output ./dist/index.android.bundle --assets-dest ./dist/assets-android",
+    "bundle:ios-js": "npx react-native bundle --entry-file rn.index.ts --platform ios --dev false --minify false --bundle-output ./dist/index.ios.jsbundle --assets-dest ./dist/assets-ios",
+    "bundle:android-js": "npx react-native bundle --entry-file rn.index.ts --platform android --dev false --minify false --bundle-output ./dist/index.android.bundle --assets-dest ./dist/assets-android",
+    "bundle:harmony-js": "npx react-native bundle-harmony --dev false --entry-file rn.index.ts --minify false --bundle-output ./dist/index.harmony.bundle  --config ./hm.metro.config.js --assets-dest ./dist/assets-harmony",
     "compile:ios-hbc": "npm run bundle:ios-js && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.ios.hbc ./dist/index.ios.jsbundle",
     "compile:android-hbc": "npm run bundle:android-js && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.android.hbc ./dist/index.android.bundle",
-    "bundle:common:ios": "npx react-native bundle --config=metro.config.js --dev false --entry-file=./common/index.js --bundle-output=./dist/common.ios.jsbundle --platform=ios --minify false",
-    "bundle:common:android": "npx react-native bundle --config=metro.config.js --dev false --entry-file=./common/index.js --bundle-output=./dist/common.android.bundle --platform=android --minify false",
-    "bundle:split:ios": "npm run bundle:common:ios && npx react-native bundle --config=metro.config.js --dev false --entry-file=index.ts --bundle-output=./dist/buz.ios.jsbundle --platform=ios --minify false --assets-dest ./dist/assets-ios",
-    "bundle:split:android": "npm run bundle:common:android && npx react-native bundle --config=metro.config.js --dev false --entry-file=index.ts --bundle-output=./dist/buz.android.bundle --platform=android --minify false --assets-dest ./dist/assets-android"
+    "bundle:common:ios": "npx react-native bundle --config=common.metro.config.js --dev false --entry-file=comoon.bundle.js --bundle-output=./dist/common.ios.jsbundle --platform=ios --minify true",
+    "bundle:common:android": "npx react-native bundle --config=common.metro.config.js --dev false --entry-file=comoon.bundle.js --bundle-output=./dist/common.android.bundle --platform=android --minify true",
+    "bundle:split:ios": "npm run bundle:common:ios && npx react-native bundle --config=metro.config.js --dev false --entry-file=rn.index.ts --bundle-output=./dist/buz.ios.jsbundle --platform=ios --minify true --assets-dest ./dist/assets-ios",
+    "bundle:split:android": "npm run bundle:common:android && npx react-native bundle --config=metro.config.js --dev false --entry-file=rn.index.ts --bundle-output=./dist/buz.android.bundle --platform=android --minify true --assets-dest ./dist/assets-android"
   },
   "dependencies": {
-    "@expo/webpack-config": "^19.0.1",
-    "expo": "~49.0.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-web": "^0.20.0",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "react-native-web": "0.19.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@expo/webpack-config": "19.0.1",
+    "@react-native-oh/react-native-harmony": "0.72.70",
+    "@react-native/metro-config": "0.72.11",
+    "@types/react": "18.2.14",
+    "expo": "49.0.23",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
