feat(配置): 新增基础和页面的Metro配置文件，重构打包脚本以支持多包构建，更新App组件以注释掉计数器示例

--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "expo:bundle:android-hermes": "expo export --platform android",
     "expo:bundle:ios-hermes": "expo export --platform ios",
     "expo:bundle:web": "expo export --platform web",
-    "bundle:ios-js": "npx react-native bundle --entry-file rn.index.ts --platform ios --dev false --minify false --bundle-output ./dist/index.ios.jsbundle --assets-dest ./dist/assets-ios",
-    "bundle:android-js": "npx react-native bundle --entry-file rn.index.ts --platform android --dev false --minify false --bundle-output ./dist/index.android.bundle --assets-dest ./dist/assets-android",
-    "bundle:harmony-js": "npx react-native bundle-harmony --dev false --entry-file rn.index.ts --minify false --bundle-output ./dist/index.harmony.bundle  --config ./hm.metro.config.js --assets-dest ./dist/assets-harmony",
-    "compile:ios-hbc": "npm run bundle:ios-js && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.ios.hbc ./dist/index.ios.jsbundle",
-    "compile:android-hbc": "npm run bundle:android-js && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.android.hbc ./dist/index.android.bundle",
-    "bundle:common:ios": "npx react-native bundle --config=common.metro.config.js --dev false --entry-file=comoon.bundle.js --bundle-output=./dist/common.ios.jsbundle --platform=ios --minify true",
-    "bundle:common:android": "npx react-native bundle --config=common.metro.config.js --dev false --entry-file=comoon.bundle.js --bundle-output=./dist/common.android.bundle --platform=android --minify true",
-    "bundle:split:ios": "npm run bundle:common:ios && npx react-native bundle --config=metro.config.js --dev false --entry-file=rn.index.ts --bundle-output=./dist/buz.ios.jsbundle --platform=ios --minify true --assets-dest ./dist/assets-ios",
-    "bundle:split:android": "npm run bundle:common:android && npx react-native bundle --config=metro.config.js --dev false --entry-file=rn.index.ts --bundle-output=./dist/buz.android.bundle --platform=android --minify true --assets-dest ./dist/assets-android"
+    "compile:ios-hbc": "npm run bundle:ios-all && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.ios.hbc ./dist/index.ios.jsbundle",
+    "compile:android-hbc": "npm run bundle:android-all && node_modules/react-native/sdks/hermesc/osx-bin/hermesc -emit-binary -out ./dist/index.android.hbc ./dist/index.android.bundle",
+    "bundle:harmony-all": "node ./scripts/bundle.js --platform=harmony --type=all --config=./harmony.metro.config.js",
+    "bundle:harmony-base": "node ./scripts/bundle.js --platform=harmony --type=base --config=./harmony.base.metro.config.js",
+    "bundle:harmony-page": "node ./scripts/bundle.js --platform=harmony --type=page --config=./harmony.page.metro.config.js",
+    "bundle:android-all": "node ./scripts/bundle.js --platform=android --type=all --config=./metro.config.js",
+    "bundle:android-base": "node ./scripts/bundle.js --platform=android --type=base --config=./base.metro.config.js",
+    "bundle:android-page": "node ./scripts/bundle.js --platform=android --type=page --config=./page.metro.config.js",
+    "bundle:ios-all": "node ./scripts/bundle.js --platform=ios --type=all --config=./metro.config.js",
+    "bundle:ios-base": "node ./scripts/bundle.js --platform=ios --type=base --config=./base.metro.config.js",
+    "bundle:ios-page": "node ./scripts/bundle.js --platform=ios --type=page --config=./page.metro.config.js"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
