--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
     "bundle:ios-page": "node ./scripts/bundle.js --platform=ios --type=page --config=./page.metro.config.js"
   },
   "dependencies": {
-    "crypto-js": "^4.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.5",
-    "react-native-web": "0.19.6"
+    "react-native": "0.72.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,7 +32,10 @@
     "@react-native-oh/react-native-harmony": "0.72.70",
     "@react-native/metro-config": "0.72.11",
     "@types/react": "18.2.14",
-    "expo": "49.0.23",
+    "crypto-js": "^4.2.0",
+    "expo": "^49.0.23",
+    "react-dom": "18.2.0",
+    "react-native-web": "0.19.6",
     "typescript": "^5.1.3"
   },
   "private": true
